src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__union_select_all__multi.snap
---
source: src/builder/tests/inserts/union_select_all.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
SELECT
  "public"."articles"."id",
  "public"."articles"."type",
  "public"."articles"."data"
FROM
  "public"."articles"
UNION
ALL
SELECT
  "public"."peoples"."id",
  "public"."peoples"."type",
  "public"."peoples"."data"
FROM
  "public"."peoples";
