src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__union_select_all__no_table.snap
---
source: src/builder/tests/inserts/union_select_all.rs
expression: res

---
(
    "",
    Ciboulette2SqlArguments {
        inner: [],
    },
)
