src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__union_select_all__single.snap
---
source: src/builder/tests/inserts/union_select_all.rs
expression: res

---
(
    "SELECT * FROM \"public\".\"peoples\"",
    Ciboulette2SqlArguments {
        inner: [],
    },
)
